<resources>
    <string name="app_name">DeepScope</string>
    <string name="upload_file">Upload File</string>
    <string name="menu_title">Title of Menu</string>
    <string name="menu_chip">Chip</string>
    <string name="menu_ocr">OCR</string>
    <string name="menu_facial">Facial</string>
    <string name="menu_image">Image</string>
    <string name="menu_certificate">Certificate</string>
    <string name="menu_normal">Normal</string>
    <string name="menu_optical">Optical</string>
    <string name="menu_normal_optical">Normal &amp; Optical</string>
    <string name="tabs_overall">Overall Result</string>
    <string name="tabs_text">Data Text</string>
    <string name="tabs_image">Images</string>
    <string name="add_image">Add Image (%1$d/10)</string>
    <string name="input_data_page">Input Data Page</string>
    <string name="birth_date">BIRTH DATE</string>
    <string name="birth_date_value">11/11/23</string>
    <string name="address">ADDRESS</string>
    <string name="address_value">"124–38 Garibong-dong, Guro-gu, Seoul"</string>
    <string name="issue_date">ISSUE DATE</string>
    <string name="customer_detail">MALE, AGE: 30</string>
    <string name="customer_name">Customer Name…</string>
    <string name="menu_visible">Visible</string>
    <string name="menu_invisible">Invisible</string>
    <string name="menu_auto">Auto</string>
    <string name="menu_prescription">Prescription</string>
    <string name="send_image">Send Image</string>
    <string name="save_data">Save Data</string>
    <string name="search">Search</string>
    <string name="similarity_0">Similarity: 0%</string>
    <string name="not_valid">(Not Valid)</string>
    <string name="close">Close</string>
    <string name="connect">Connect</string>
    <string name="regula_id_0326">Regula ID 0326</string>
    <string name="john_doe">John Doe</string>
    <string name="medicines">MEDICINES</string>
    <string name="report">Report</string>
    <string name="functional_cosmetics">Functional Cosmetics</string>
    <string name="dermatology_clinic">Dermatology Clinic</string>
    <string name="complete">Complete</string>
    <string name="there_is_no_photos">there is no photos</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="docreadersdk_has_been_failed_to_identify">DocReaderSDK has been failed to identify</string>
    <string name="scanning_was_cancelled">Scanning was cancelled</string>
    <string name="skin_disease_care">Skin Disease Care</string>
    <string name="skin_disease_diagnosis">Skin Disease Diagnosis</string>
    <string name="skin_aging_care">Skin Aging Care</string>
    <string name="skin_aging_diagnosis">Skin Aging Diagnosis</string>
    <string name="esroban_description_1">Apply Esroban 3 times a day.</string>
    <string name="esroban_description_2">Take Calcineurin Inhibitor twice a day.</string>
    <string name="melanon_cream_description_1">Apply Melanon Cream once a day before bedtime.</string>
    <string name="melanon_cream_description_2">Apply anti-wrinkle cream morning and evening</string>
    <string name="esroban">Esroban</string>
    <string name="_1">1</string>
    <string name="calcineurin_inhibitor">Calcineurin Inhibitor</string>
    <string name="melanon_cream">Melanon Cream</string>
    <string name="anti_wrinkle_cream">Anti-wrinkle Cream</string>
    <string name="facesdk_init_completed_successfully">FaceSDK init completed successfully</string>
    <string name="init_facesdk_finished_with_error">"Init FaceSDK finished with error"</string>
    <string name="preparing_database">preparing database</string>
    <string name="initializing">Initializing</string>
    <string name="camera">Camera</string>
    <string name="setting">Setting</string>
    <string name="similarity">Similarity: %1$d \\(%%)</string>
    <string name="similarity_none">Similarity: -</string>
    <string name="valid">(Valid)</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="failed_to_connect_to_the_torch_device">Failed to connect to the torch device</string>
    <string name="downloading_database">Downloading database: %1$d </string>
    <string name="prepare_db_failed">Prepare DB failed:%1$s</string>
    <string name="device_name">Device name</string>
    <string name="searching_devices">Searching devices</string>
    <string name="bluetooth_is_connected">Bluetooth is connected</string>
    <string name="bluetooth_is_not_connected">Bluetooth is not connected</string>
    <string name="uv_image_not_found">Failed to capture with UV</string>
    <string name="face_captured_successfully">Face captured successfully</string>
    <string name="document_image">Document Image</string>
</resources>