<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    android:overScrollMode="never"
    tools:context=".ui.customerInformation.CustomerInformationActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:paddingVertical="16dp"
        android:layout_height="match_parent">

        <View
            android:id="@+id/top_divider"
            android:layout_width="100dp"
            android:layout_height="4dp"
            android:layout_marginTop="48dp"
            android:background="@color/background_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="36dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/customer_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_divider" />

        <TextView
            android:id="@+id/detail_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/customer_detail"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/title_tv"
            app:layout_constraintStart_toStartOf="@id/title_tv"
            app:layout_constraintTop_toBottomOf="@id/title_tv" />

        <View
            android:id="@+id/middle_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/background_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_tv" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:stretchColumns="*"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/middle_divider">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/birth_date_title_tv"
                    android:padding="3dip"
                    android:text="@string/birth_date"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/birth_date_tv"
                    android:padding="3dip"
                    android:text="@string/birth_date_value"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/address_title_tv"
                    android:padding="3dip"
                    android:text="@string/address"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/address_tv"
                    android:padding="3dip"
                    android:text="@string/address_value"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/issue_title_tv"
                    android:padding="3dip"
                    android:text="@string/issue_date"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/issue_tv"
                    android:padding="3dip"
                    android:text="@string/birth_date_value"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </TableRow>


        </TableLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_photo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:orientation="vertical"
            android:paddingVertical="8dp"
            android:scrollbars="horizontal"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tableLayout"
            app:spanCount="2"
            tools:listitem="@layout/rv_item_image" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:enabled="false"
            android:paddingHorizontal="24dp"
            android:paddingVertical="14dp"
            android:text="@string/send_image"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_photo" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>